# hello-rust-debug

./: Anchor.toml  README.md
programs/basic-2/: Cargo.toml
programs/basic-2/tests/: vanila.rs
programs/debug_anchor/: Cargo.toml
programs/debug_anchor/src/: lib.rs
programs/debug_vanilla/: Cargo.toml
programs/debug_vanilla/src/: lib.rs  processor.rs
programs/debug_vanilla/tests/: functional.rs
programs/hello-rust-debug/: Cargo.toml
programs/hello-rust-debug/src/: lib.rs
programs/hello_rust_debug/: Cargo.toml
programs/hello_rust_debug/src/: lib.rs
programs/hello_rust_debug/tests/: notokio.rs  tokio.rs
tests/: hello-rust-debug.ts
