[package]
name = "debug_vanilla"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "debug_vanilla"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.8.2"

[dev-dependencies]
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"
