[package]
name = "hello_rust_debug"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_rust_debug"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
solana-program = "1.8.2"
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"
spl-token = "3.2.0"
